# tgoskits

./: .gitignore  CLAUDE.md  Cargo.toml  rust-toolchain.toml
Project logs/: 6.26_dunbo.md
apps/helloworld/: qemu-la64.toml
apps/helloworld/src/: main.rs
components/someboot/: build.rs
components/sparreal-os/: .gitignore  CLAUDE.md  README.md
components/sparreal-os/.cargo/: config-app.toml
components/sparreal-os/.github/workflows/: board.toml  container-publish.yml  test-real.yml
components/sparreal-os/build-config/: aarch64.toml  loongarch64.toml  riscv64.toml
components/sparreal-os/container/: Dockerfile
components/sparreal-os/crates/bare-test/: CHANGELOG.md  Cargo.toml  build.rs
components/sparreal-os/crates/bare-test-macros/: CHANGELOG.md  Cargo.toml
components/sparreal-os/crates/bare-test/src/net/: ping.rs
components/sparreal-os/crates/mmio-api/: Cargo.toml
components/sparreal-os/crates/page-table-generic/: Cargo.toml
components/sparreal-os/crates/ranges-ext/: Cargo.toml
components/sparreal-os/crates/somehal-macros/: Cargo.toml
components/sparreal-os/crates/sparreal-kernel/: CHANGELOG.md  Cargo.toml
components/sparreal-os/doc/loongarch/: Devlog.md
components/sparreal-os/driver/bus/pcie/: Cargo.toml
components/sparreal-os/driver/bus/pcie/src/: lib.rs  root.rs
components/sparreal-os/driver/bus/pcie/src/types/config/: endpoint.rs
components/sparreal-os/driver/rdrive/: Cargo.toml
components/sparreal-os/driver/rdrive/src/: error.rs  lib.rs  manager.rs
components/sparreal-os/driver/rdrive/src/probe/fdt/: mod.rs
components/sparreal-os/driver/rdrive/src/probe/pci/: mod.rs
components/sparreal-os/driver/rdrive/src/register/: mod.rs
components/sparreal-os/driver/serial/: Cargo.toml
components/sparreal-os/platform/somehal/: Cargo.toml
components/sparreal-os/scripts/: test-async.ps1  test-base.sh  test_aarch64.sh  test_aarch64_el1.sh  test_aarch64_el1_uboot.sh  test_aarch64_el2.sh  test_all.ps1  test_all.sh  test_e1000.sh  test_la64.ps1  test_loongarch64.sh  test_nvme.sh  test_riscv64.sh  test_riscv64_smp.sh  test_x86_64.sh  test_x86_64_smp.sh
components/sparreal-os/test-suit/async/: Cargo.toml  (+3 more)
crates/bare-test/: CHANGELOG.md
crates/bare-test-macros/: CHANGELOG.md
crates/dma-api/: README.md
crates/dma-api/src/: array.rs  common.rs  dbox.rs  def.rs  lib.rs
crates/dma-api/tests/: test.rs  test_helpers.rs
crates/kernutil/: CHANGELOG.md  Cargo.toml
crates/kernutil/src/: memory.rs
crates/mmio-api/: Cargo.toml
crates/page-table-generic/src/: frame.rs  lib.rs  table.rs  walk.rs
crates/page-table-generic/tests/: loongarch64_simple.rs  loongarch64_simulation.rs  test.rs
crates/ranges-ext/: CHANGELOG.md  Cargo.toml
crates/someboot/: CHANGELOG.md  Cargo.toml  build.rs
crates/someboot/src/: irq.rs  lib.rs
crates/somehal/: CLAUDE.md  Cargo.toml  build.rs
crates/somehal-macros/src/: _entry.rs  lib.rs
crates/somehal/src/: cmdline.rs  console.rs  elf.rs  lib.rs
crates/sparreal-kernel/: CHANGELOG.md  CLAUDE.md  Cargo.toml
crates/sparreal-kernel/src/: lang.rs
crates/sparreal-macros/: CHANGELOG.md
doc/loongarch/: Devlog.md
driver/block/rd-block/: CHANGELOG.md
driver/serial/tests/: test.rs
drivers/usb/usb-host/: Cargo.toml
os/StarryOS/kernel/: Cargo.toml
os/StarryOS/starryos/: Cargo.toml
os/arceos/examples/ax-monitor-guest/: Cargo.toml  vmlinux.symtab
os/arceos/examples/ax-monitor-guest/src/: main.rs
os/arceos/examples/ax-monitor-guest/src/capture/: export.rs  hvc.rs  locate.rs  log.rs  memory.rs  mod.rs  modules.rs  register.rs  snapshot.rs  storage.rs
os/arceos/examples/ax-monitor-guest/src/monitor/: event.rs  heartbeat.rs  mod.rs  panic.rs  state.rs  watchdog.rs
os/arceos/examples/ax-monitor-guest/src/recovery/: analyzer.rs  console.rs  dstruct.rs  kallsyms.rs  mod.rs  page_table.rs  process.rs  report.rs  symbol.rs  unwind.rs
os/arceos/examples/ax-serial-test/: Cargo.toml
os/arceos/examples/ax-serial-test/src/: main.rs
os/linux/: README.md  build.sh  config  panic_hvc.patch
platform/axplat-dyn/: Cargo.toml
platform/somehal/: CHANGELOG.md  Cargo.toml
platform/sparreal-rt/: CHANGELOG.md  Cargo.toml
platform/sparreal-rt/src/: hal_impl.rs  lib.rs
scripts/axbuild/: Cargo.toml
scripts/test/: clippy_crates.csv
test-suit/hello/: qemu-la64.toml
test-suit/hello/src/: main.rs
test-suit/net/: Cargo.toml
test-suit/timer/: qemu-aarch64.toml
tools/: gen-fingerprint.sh  gen-kallsyms-config.sh
virtualization/arm_vcpu/src/: context_frame.rs  exception.S  exception.rs  vcpu.rs
virtualization/axhvc/src/: lib.rs
virtualization/axvm/src/: vm.rs
(+193 files in other folders)
