[package]
name = "ax-serial-test"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = ["ax-std"]
ax-std = ["dep:ax-std", "ax-std/plat-dyn", "ax-std/irq", "ax-std/paging", "ax-std/alloc"]

[dependencies]
ax-driver.workspace = true
ax-hal = { workspace = true, features = ["plat-dyn", "irq"] }
ax-std = { workspace = true, optional = true }
